--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Weather App for UD811">
   <title>Weather</title>
+  <link rel="stylesheet" href="styles/ud811.css">
   <!-- Insert link to stylesheet here -->
-  <link rel="stylesheet" href="styles\ud811.css">
-  
 </head>
 <body>
 
@@ -145,6 +144,7 @@
   </div>
 
   <!-- Insert link to app.js here -->
-  <script type="text/javascript" src="scripts\app.js"></script>
+  <script type="text/javascript" src="scripts/app.js"></script>
+  <script src="scripts/localforage-1.4.0.js"></script>
 </body>
 </html>
