--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
 
   <!-- Insert link to app.js here -->
   <script type="text/javascript" src="scripts/app.js"></script>
-  <script src="scripts/localforage-1.4.0.js"></script>
+  <script type="text/javascript" src="scripts/localforage-1.4.0.js"></script>
 </body>
 </html>
