--- a/cheapstanley/index.html
+++ b/cheapstanley/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Infosys</title>
-  <base href="//ud811/cheapstanley/">
+  <base href="/ud811/cheapstanley/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
